--- a/web/docs/source/classes/view/CatracaVirtualView.php.html
+++ b/web/docs/source/classes/view/CatracaVirtualView.php.html
@@ -71,7 +71,7 @@ class CatracaVirtualView {
 	}
 	
 	/**
-	 * Gera o formul&aacute;rio paara a sele&ccedil;&atilde;o do RU a ser utilizado.
+	 * Gera o formul&aacute;rio para a sele&ccedil;&atilde;o do RU a ser utilizado.
 	 * 
 	 * @param array $listaDeCatracas        	
 	 */
