--- a/web/css/estilo_responsivo.css
+++ b/web/css/estilo_responsivo.css
@@ -1,38 +1,28 @@
-@media screen and (max-width: 26cm){
-	
-	body{		
+@media screen and (max-width: 26cm) {
+	body {
 		font-size: 16px;
-	}	
-	
-	div#topo{
+	}
+	div#topo {
 		padding-top: 0px !important;
 		height: 90px;
-	}	
-	
-	img{
-		position: absolute;		
-		height: 100px;
-		width: 100px
 	}
-	
-	div#login{
-		padding-top: 400px;	
+	img {
+		display: none; 
+		position : absolute;
+		width: 100px;
+		position: absolute;
 	}
-	
-	h1{
-		margin-top:10px;
+	div#login {
+		padding-top: 400px;
+	}
+	h1 {
+		margin-top: 10px;
 		font-size: 20px;
 	}
-	
-	#barra{
+	#barra {
 		padding-top: 0;
-		
 	}
-	
-	
-    
 }
 
-@media screen and (max-width: 481px){
-	
+@media screen and (max-width: 481px) {
 }
